<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    
    <ImageView
        android:id="@+id/img_poster_movie"
        android:layout_width="190dp"
        android:layout_height="270dp"
        android:layout_marginTop="18dp"
        android:elevation="25dp"
        android:contentDescription="@string/movie_poster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/text_title_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_poster_movie"
        app:layout_constraintTop_toTopOf="@+id/img_poster_movie"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/txt_genre_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_title_movie"
        app:layout_constraintTop_toBottomOf="@+id/text_title_movie"
        android:text="@string/genre" />

    <TextView
        android:id="@+id/text_genre_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/txt_genre_movie"
        app:layout_constraintStart_toStartOf="@+id/txt_genre_movie"
        tools:text="@string/genre"/>

    <TextView
        android:id="@+id/txt_duration_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_genre_movie"
        app:layout_constraintTop_toBottomOf="@+id/text_genre_movie"
        android:text="@string/duration" />

    <TextView
        android:id="@+id/text_duration_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/txt_duration_movie"
        app:layout_constraintStart_toStartOf="@+id/txt_duration_movie"
        tools:text="@string/duration"/>

    <TextView
        android:id="@+id/txt_score_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_duration_movie"
        app:layout_constraintTop_toBottomOf="@+id/text_duration_movie"
        android:text="@string/score" />

    <TextView
        android:id="@+id/text_score_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/txt_score_movie"
        app:layout_constraintStart_toStartOf="@+id/txt_score_movie"
        tools:text="@string/score"/>

    <TextView
        android:id="@+id/txt_status_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_score_movie"
        app:layout_constraintTop_toBottomOf="@+id/text_score_movie"
        android:text="@string/status" />

    <TextView
        android:id="@+id/text_status_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/txt_status_movie"
        app:layout_constraintStart_toStartOf="@+id/txt_status_movie"
        tools:text="@string/status"/>

    <TextView
        android:id="@+id/txt_release_date_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_status_movie"
        app:layout_constraintTop_toBottomOf="@+id/text_status_movie"
        android:text="@string/release_date" />

    <TextView
        android:id="@+id/text_release_date_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/txt_release_date_movie"
        app:layout_constraintStart_toStartOf="@+id/txt_release_date_movie"
        tools:text="@string/release_date"/>

    <TextView
        android:id="@+id/txt_overview_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/overview"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_poster_movie" />

    <TextView
        android:id="@+id/text_overview_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_overview_movie"
        app:layout_constraintTop_toBottomOf="@+id/txt_overview_movie"
        tools:text="@string/overview" />

</androidx.constraintlayout.widget.ConstraintLayout>